# nhl_statsapi

./: README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_nhl_statsapi.py
