[tool.poetry]
name = "nhl_statsapi"
version = "0.1.0"
description = "NHL Stats API"
authors = ["munsterberg <jetrussell93@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Munsterberg/nhl_statsapi"
repository = "https://github.com/Munsterberg/nhl_statsapi"
keywords = ["nhl", "api", "hockey", "stats"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
